--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <div class="col-12 tm-content">
         <h2>Welcome to My Forex Trading Journey</h2>
         <p>This website shares my experience, strategies, and lessons from trading Forex over the years. I hope it helps other traders too.</p>
+
+        <!-- Updated Personal Images -->
+        <h3>My Forex Trading Photos</h3>
+        <img src="images/stock-chart.jpg" alt="Stock Chart" style="max-width:100%; height:auto; margin-bottom:10px;">
+        <img src="images/my-fx.jpg" alt="My FX Setup" style="max-width:100%; height:auto; margin-bottom:10px;">
         
-        <!-- My Personal Images -->
-        <h3>My Forex Trading Images</h3>
-        <img src="images/forex-lesson.jpg" alt="Forex Lesson" style="max-width:100%; height:auto; margin-bottom:10px;">
-        <img src="images/money.jpg" alt="Money" style="max-width:100%; height:auto; margin-bottom:10px;">
-        <img src="images/forex.jpg" alt="Forex" style="max-width:100%; height:auto;">
 
         <!-- ROI Calculator -->
         <h3>Calculate Your ROI</h3>
