--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- Updated Personal Images -->
         <h3>My Forex Trading Photos</h3>
         <img src="images/stock-chart.jpg" alt="Stock Chart" style="max-width:100%; height:auto; margin-bottom:10px;">
-        <img src="images/my-fx.jpg" alt="My FX" style="max-width:100%; height:auto; margin-bottom:10px;">
+        <img src="images/my-fx.jpg" alt="My FX Setup" style="max-width:100%; height:auto; margin-bottom:10px;">
         
 
         <!-- ROI Calculator -->
