--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
         <!-- Updated Personal Images -->
         <h3>My Forex Trading Photos</h3>
-          <img src="images/Stock.PNG" alt="Stock Photo" style="max-width:100%; height:auto; margin-bottom:10px;">
-          <img src="images/FX.PNG" alt="FX Photo" style="max-width:100%; height:auto;">
+          <img src="images/stock.png" alt="stock photo" style="max-width:100%; height:auto; margin-bottom:10px;">
+          <img src="images/fx.png" alt="fx photo" style="max-width:100%; height:auto;">
 
 
         <!-- ROI Calculator -->
